Fix dark mode masthead background color

--- a/_sass/_dark-mode.scss
+++ b/_sass/_dark-mode.scss
@@ -29,7 +29,7 @@
     --border-color: #333;
     --code-background-color: #2d2d2d;
     --code-text-color: #e0e0e0;
-    --masthead-background: #222;
+    --masthead-background: #121212;
     --masthead-text-color: #8fa3b3;
     --link-color: #52adc8;
     --link-color-hover: #6fc4d9;
